--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - C:\Users\CYRIL T VARGHESE\OneDrive\Desktop\anime_comic\comic_world\lib\image
+    # - C:\Users\CYRIL T VARGHESE\OneDrive\Desktop\anime_comic\comic_world\lib\image
   # - lib/channels4_profile.jpg
   #   - images/a_dot_ham.jpeg
 
