--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
+  # assets:
     # - C:\Users\CYRIL T VARGHESE\OneDrive\Desktop\anime_comic\comic_world\lib\image
   # - lib/channels4_profile.jpg
   #   - images/a_dot_ham.jpeg
